# data_science_studies

./: .gitignore  README.md  pyproject.toml
bgg/: bgg_history.ipynb  build_db.py
diamonds-kaggle/: solution.ipynb
ds4a/: README.md  download_case.py
ds4a/case_5.1_fellow/: case_5.1_analytical_fellow.ipynb  case_5.1_coding_fellow.ipynb
ds4a/case_5.1_fellow/data/: df_exercise.csv  filenames.csv  rental_cost.csv  stations.json
ds4a/case_5.1_review_module_fellow/: case_5.1_review_module_fellow.ipynb
ds4a/case_7.2_fellow/: case_7.2_analytical_fellow.ipynb  case_7.2_coding_fellow.ipynb
ds4a/case_7.2_review_module_fellow/: case_7.2_review_module_fellow.ipynb
ds4a/case_7.6_fellow/: case_7.6_fellow.ipynb
ds4a/case_7.6_fellow/.ipynb_checkpoints/: case_7.6-checkpoint.ipynb
ds4a/case_7.6_fellow/data/: insurance.xlsx
ds4a/case_7.6_review_module_fellow/: case_7.6_review_module_fellow.ipynb
ds4a/extended_case_1_fellow/: extended_case_1_fellow.ipynb
ds4a/extended_case_2_fellow/: extended_case_2_fellow.ipynb
ds4a/extended_case_3_fellow/: extended_case_3_fellow.ipynb
mle/: mle.ipynb
