[tool.poetry]
name = "ds"
version = "0.1.0"
description = ""
authors = ["Renato Scaroni <renato.scaroni@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7.12"
pandas = "^1.3.4"
numpy = "^1.21.4"
jupyterlab = "^3.2.2"
scikit-learn = "^1.0.1"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
bokeh = "^2.4.1"
jupyter-bokeh = "^3.0.4"
shap = "^0.40.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
