[tool.poetry]
name = "ds"
version = "0.1.0"
description = ""
authors = ["Renato Scaroni <renato.scaroni@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7.12"
pandas = "^1.3.4"
numpy = "^1.21.4"
scikit-learn = "^1.0.1"
jupyterlab = "^3.2.2"
jupyter = "^1.0.0"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
tqdm = "^4.62.3"
cachetools = "^4.2.4"
scipy = "^1.7.2"
cloudpickle = "^2.0.0"
fastprogress = "^1.0.0"
mkl-service = "^2.4.0"
pymc3 = "^3.11.4"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
